Tons of updates!

--- a/index.html
+++ b/index.html
@@ -9,76 +9,91 @@
     <link rel="stylesheet" href="css/map.css">
 </head>
 <body>
-    <header class="header">
+    <div class="body">
+        <header class="header">
+            <a href="index.html" class="logo">
+                <img class="compass-logo" src="files/grey-logo.svg" alt="Culinary Cuisine Compass Logo">
+            </a>
+            <input class="menu-btn" type="checkbox" id="menu-btn" />
+            <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+            <ul class="menu">
+                <li><a href="index.html">home</a></li>
+                <li><a href="recipes_grid.html">recipes</a></li>
+                <li><a href="help.html">help</a></li>
+            </ul>
+        </header>
+        <div class="title">
+            <h1>CULINARY COMPASS</h1>
+            <h3>Your passport to recipes from every corner of the world</h3>
+        </div>
+        <div class="world-map">
+            <span class="pin pin1">
+                <a class="map-pin" href="#"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in Mexico"></a>
+                <p class="popup">Mexican</p>
+            </span>
+            <span class="pin pin2">
+                <a class="map-pin" href="#"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in America"></a>
+                <p class="popup">American</p>
+            </span>
+            <span class="pin pin3">
+                <a class="map-pin" href="#"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in France"></a>
+                <p class="popup">French</p>
+            </span>
+            <span class="pin pin4">
+                <a class="map-pin" href="#"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in Italy"></a>
+                <p class="popup">Italian</p>
+            </span>
+            <span class="pin pin5">
+                <a class="map-pin" href="#"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in the Mediterranean Sea"></a>
+                <p class="popup">Mediterranean</p>
+            </span>
+            <span class="pin pin6">
+                <a class="map-pin" href="#"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in the Middle East"></a>
+                <p class="popup">Middle Eastern</p>
+            </span>
+            <span class="pin pin7">
+                <a class="map-pin" href="#"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in India"></a>
+                <p class="popup">Indian</p>
+            </span>
+            <span class="pin pin8">
+                <a class="map-pin" href="#"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in Thailand"></a>
+                <p class="popup">Thai</p>
+            </span>
+            <span class="pin pin9">
+                <a class="map-pin" href="#"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in Asia"></a>
+                <p class="popup">Asian Fusion</p>
+            </span>
+            <span class="pin pin10">
+                <a class="map-pin" href="#"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in Korea"></a>
+                <p class="popup">Korean</p>
+            </span>
+            <span class="pin pin11">
+                <a class="map-pin" href="#"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in Japan"></a>
+                <p class="popup">Japanese</p>
+            </span>
+            <span class="pin pin12">
+                <a class="map-pin" href="#"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in China"></a>
+                <p class="popup">Chinese</p>
+            </span>
+        </div>
+        <div class="center">
+            <a href="recipes_grid.html">
+                <button class="button home-button">SEE RECIPES</button>
+            </a>
+        </div>
+        <div class="about">
+            <img src="files/images/chef.jpg" alt="">
+            <h1>ABOUT THE CHEF</h1>
+            <h2>OLIVIA KNESTAUT</h2>
+            <p>Chef Olivia is a world traveler and culinary adventurer who brings global flavors to your kitchen. With a passion for discovering authentic recipes, Olivia has spent years traveling from bustling city markets to remote villages, learning traditional cooking techniques from local chefs and home cooks alike. <br> <br> Each dish she shares on Culinary Compass tells a story of culture, history, and the love of food, offering readers the chance to experience the world one recipe at a time. From street food to gourmet delicacies, Olivia inspires her audience to explore diverse cuisines and savor every bite.</p>
+        </div>
+    </div>
+
+    <footer>
         <a href="index.html" class="logo">
             <img class="compass-logo" src="files/grey-logo.svg" alt="Culinary Cuisine Compass Logo">
+            <h2>CULINARY COMPASS</h2>
         </a>
-        <input class="menu-btn" type="checkbox" id="menu-btn" />
-        <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-        <ul class="menu">
-            <li><a href="index.html">home</a></li>
-            <li><a href="allrecipes.html">recipes</a></li>
-            <li><a href="help.html">help</a></li>
-        </ul>
-    </header>
-    <div class="title">
-        <h1>CULINARY COMPASS</h1>
-        <h3>Your passport to recipes from every corner of the world</h3>
-    </div>
-    <div class="world-map">
-        <span class="pin pin1">
-            <a class="map-pin" href="#"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in Mexico"></a>
-            <p class="popup">Mexican</p>
-        </span>
-        <span class="pin pin2">
-            <a class="map-pin" href="#"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in America"></a>
-            <p class="popup">American</p>
-        </span>
-        <span class="pin pin3">
-            <a class="map-pin" href="#"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in France"></a>
-            <p class="popup">French</p>
-        </span>
-        <span class="pin pin4">
-            <a class="map-pin" href="#"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in Italy"></a>
-            <p class="popup">Italian</p>
-        </span>
-        <span class="pin pin5">
-            <a class="map-pin" href="#"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in the Mediterranean Sea"></a>
-            <p class="popup">Mediterranean</p>
-        </span>
-        <span class="pin pin6">
-            <a class="map-pin" href="#"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in the Middle East"></a>
-            <p class="popup">Middle Eastern</p>
-        </span>
-        <span class="pin pin7">
-            <a class="map-pin" href="#"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in India"></a>
-            <p class="popup">Indian</p>
-        </span>
-        <span class="pin pin8">
-            <a class="map-pin" href="#"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in Thailand"></a>
-            <p class="popup">Thai</p>
-        </span>
-        <span class="pin pin9">
-            <a class="map-pin" href="#"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in Asia"></a>
-            <p class="popup">Asian Fusion</p>
-        </span>
-        <span class="pin pin10">
-            <a class="map-pin" href="#"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in Korea"></a>
-            <p class="popup">Korean</p>
-        </span>
-        <span class="pin pin11">
-            <a class="map-pin" href="#"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in Japan"></a>
-            <p class="popup">Japanese</p>
-        </span>
-        <span class="pin pin12">
-            <a class="map-pin" href="#"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in China"></a>
-            <p class="popup">Chinese</p>
-        </span>
-    </div>
-    <div>
-        <a href="#">
-            SEE RECIPES
-        </a>
-    </div>
+    </footer>
 </body>
 </html>
