--- a/index.html
+++ b/index.html
@@ -28,51 +28,51 @@
         </div>
         <div class="world-map">
             <span class="pin pin1">
-                <a class="map-pin" href="#"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in Mexico"></a>
+                <a class="map-pin" href="cuisine_template.html"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in Mexico"></a>
                 <p class="popup">Mexican</p>
             </span>
             <span class="pin pin2">
-                <a class="map-pin" href="#"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in America"></a>
+                <a class="map-pin" href="cuisine_template.html"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in America"></a>
                 <p class="popup">American</p>
             </span>
             <span class="pin pin3">
-                <a class="map-pin" href="#"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in France"></a>
+                <a class="map-pin" href="cuisine_template.html"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in France"></a>
                 <p class="popup">French</p>
             </span>
             <span class="pin pin4">
-                <a class="map-pin" href="#"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in Italy"></a>
+                <a class="map-pin" href="cuisine_template.html"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in Italy"></a>
                 <p class="popup">Italian</p>
             </span>
             <span class="pin pin5">
-                <a class="map-pin" href="#"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in the Mediterranean Sea"></a>
+                <a class="map-pin" href="cuisine_template.html"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in the Mediterranean Sea"></a>
                 <p class="popup">Mediterranean</p>
             </span>
             <span class="pin pin6">
-                <a class="map-pin" href="#"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in the Middle East"></a>
+                <a class="map-pin" href="cuisine_template.html"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in the Middle East"></a>
                 <p class="popup">Middle Eastern</p>
             </span>
             <span class="pin pin7">
-                <a class="map-pin" href="#"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in India"></a>
+                <a class="map-pin" href="cuisine_template.html"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in India"></a>
                 <p class="popup">Indian</p>
             </span>
             <span class="pin pin8">
-                <a class="map-pin" href="#"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in Thailand"></a>
+                <a class="map-pin" href="cuisine_template.html"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in Thailand"></a>
                 <p class="popup">Thai</p>
             </span>
             <span class="pin pin9">
-                <a class="map-pin" href="#"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in Asia"></a>
+                <a class="map-pin" href="cuisine_template.html"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in Asia"></a>
                 <p class="popup">Asian Fusion</p>
             </span>
             <span class="pin pin10">
-                <a class="map-pin" href="#"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in Korea"></a>
+                <a class="map-pin" href="cuisine_template.html"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in Korea"></a>
                 <p class="popup">Korean</p>
             </span>
             <span class="pin pin11">
-                <a class="map-pin" href="#"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in Japan"></a>
+                <a class="map-pin" href="cuisine_template.html"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in Japan"></a>
                 <p class="popup">Japanese</p>
             </span>
             <span class="pin pin12">
-                <a class="map-pin" href="#"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in China"></a>
+                <a class="map-pin" href="cuisine_template.html"><img class="map-pin" src="files/yellow-pin.svg" alt="Yellow pin in China"></a>
                 <p class="popup">Chinese</p>
             </span>
         </div>
