Adding Style Tile Page

--- a/cuisine_template.html
+++ b/cuisine_template.html
@@ -274,6 +274,7 @@
         </div>
     </div>
     <footer>
+        <a href="design_inventory.html" class="logo footer-link"><h2>Design Inventory</h2></a>
         <a href="index.html" class="logo">
             <img class="compass-logo" src="files/grey-logo.svg" alt="Culinary Cuisine Compass Logo">
             <h2>CULINARY COMPASS</h2>
